修改用户/角色模块逻辑

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -126,3 +126,6 @@ minio.accessKey= minio
 minio.secretKey= minio123456
 minio.secure= false
 minio.bucketName= selfmanage
+
+#默认角色
+ser.default.role = ff2fe671-514c-43fb-96ec-9196129f481d
