用户/权限模块完善,新增阿里云短信验证还未测通

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
 
 
     <dependencies>
+<!--        阿里云短信验证-->
+            <!-- https://mvnrepository.com/artifact/com.aliyun/aliyun-java-sdk-core -->
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-core</artifactId>
+                <version>4.4.3</version>
+            </dependency>
         <dependency>
             <groupId>com.alibaba.boot</groupId>
             <artifactId>nacos-config-spring-boot-starter</artifactId>
