--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,12 @@ spring.jackson.time-zone= GMT+8
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.url=jdbc:mysql://1.13.176.144:3306/zuhaowan_test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
-spring.datasource.druid.username=root
+spring.datasource.druid.username=linux_mysql
 spring.datasource.druid.password=password
+
+#spring.datasource.druid.url=jdbc:mysql://1.116.231.179:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+#spring.datasource.druid.username=root
+#spring.datasource.druid.password=root
 
 
 
