'用户模块更新JWT'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8097
 spring.application.name=role
-nacos.config.server-addr=114.55.145.114:8848
+#nacos.config.server-addr=114.55.145.114:8848
 #spring.cloud.nacos.config.server-addr=114.55.145.114:8848
 #spring.cloud.nacos.discovery.server-addr=114.55.145.114:8848
 spring.jackson.time-zone= GMT+8
@@ -124,12 +124,12 @@ time.dataset = 0 0 1 1/1 * ?
 time.model = 0 0 1 1/1 * ?  
 
 #minIO 地址
-minio.endpoint= 114.55.145.114
+minio.endpoint= 124.222.100.56
 minio.port= 11030
-minio.accessKey= minio
-minio.secretKey= minio123456
+minio.accessKey= admin
+minio.secretKey= admin123456
 minio.secure= false
-minio.bucketName= selfmanage
+minio.bucketName= zhanghao
 
 #默认角色
-ser.default.role = ff2fe671-514c-43fb-96ec-9196129f481d
+ser.default.role = 2cc1c78c-cdfd-42b9-813f-f91000a32f36
